Your step will soil many countries.

--- a/backend/tasks.json
+++ b/backend/tasks.json
@@ -1,1 +1,1 @@
-[]
+[{"taskname":"&#9785; Attend pointless meeting","message":"server received and added task: &#9785; Attend pointless meeting","changeTask":0,"clientId":"acb1634e93f4fa73a81910","deleteTask":0,"checked":0,"addedToServer":true}]
