It has long been an axiom of mine that the little things are infinitely the most important. 		-- Sir Arthur Conan Doyle, "A Case of Identity"

--- a/backend/tasks.json
+++ b/backend/tasks.json
@@ -1,1 +1,1 @@
-[]
+[{"taskname":"&#9785; Attend pointless meeting","message":"server received and added task: &#9785; Attend pointless meeting","changeTask":0,"clientId":"e7eee605da679f6a13171d","deleteTask":0,"checked":0,"addedToServer":true}]
